force-app/main/default/objects/Query_PMT__c/Query_PMT__c.object-meta.xml
<CustomObject>
    <label>Query</label>
    <nameField>
        <displayFormat>QY-{000000}</displayFormat>
        <label>Query Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>