force-app/main/default/objects/Query_PMT__c/fields/Analysis_PMT__c.field-meta.xml
<CustomField>
    <fullName>Analysis_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analysis</label>
    <referenceTo>Analysis_PMT__c</referenceTo>
    <relationshipLabel>Query</relationshipLabel>
    <relationshipName>Queries</relationshipName>
    <type>Lookup</type>
</CustomField>