force-app/main/default/objects/Query_PMT__c/fields/Design_PMT__c.field-meta.xml
<CustomField>
    <fullName>Design_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design</label>
    <referenceTo>Design_PMT__c</referenceTo>
    <relationshipLabel>Query</relationshipLabel>
    <relationshipName>Query</relationshipName>
    <type>Lookup</type>
</CustomField>