force-app/main/default/objects/Query_PMT__c/fields/Expected_Close_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date_PMT__c</fullName>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>