force-app/main/default/objects/Query_PMT__c/fields/Last_Modify_PMT__c.field-meta.xml
<CustomField>
    <fullName>Last_Modify_PMT__c</fullName>
    <label>Last Modify</label>
    <summarizedField>Response_PMT__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Response_PMT__c.Query_PMT__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>