force-app/main/default/objects/Query_PMT__c/fields/Last_Response_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Date_PMT__c</fullName>
    <label>Last Response Date</label>
    <type>Date</type>
</CustomField>