force-app/main/default/objects/Query_PMT__c/fields/Last_Response_PMT__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_PMT__c</fullName>
    <label>Last Response</label>
    <type>TextArea</type>
</CustomField>