force-app/main/default/objects/Query_PMT__c/fields/Query_By_PMT__c.field-meta.xml
<CustomField>
    <fullName>Query_By_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Query By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Queries</relationshipName>
    <type>Lookup</type>
</CustomField>