force-app/main/default/objects/Query_PMT__c/fields/Query_Detail_PMT__c.field-meta.xml
<CustomField>
    <fullName>Query_Detail_PMT__c</fullName>
    <label>Query Detail</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>