force-app/main/default/objects/Query_PMT__c/fields/Query_for_PMT__c.field-meta.xml
<CustomField>
    <fullName>Query_for_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Query for</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Queries</relationshipLabel>
    <relationshipName>Queries</relationshipName>
    <type>Lookup</type>
</CustomField>