force-app/main/default/objects/Query_PMT__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <summaryForeignKey>Response_PMT__c.Query_PMT__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>