force-app/main/default/objects/Query_PMT__c/recordTypes/Analysis_PMT.recordType-meta.xml
<RecordType>
    <fullName>Analysis_PMT</fullName>
    <active>true</active>
    <label>Analysis</label>
</RecordType>