force-app/main/default/objects/Query_PMT__c/recordTypes/Design_PMT.recordType-meta.xml
<RecordType>
    <fullName>Design_PMT</fullName>
    <active>true</active>
    <label>Design</label>
</RecordType>